@@ -14,3 +14,4 @@
 - Fixed: Show search results even if Wikipedia call fails
 - Feature: Streamlined search engine results pages for text and image searches
 - Feature: Improved ogranization of meta data in more page info view
+- Feature: Add Domain Backlinks view
